--- a/frontend/src/assets/css/Conducteur.css
+++ b/frontend/src/assets/css/Conducteur.css
@@ -33,14 +33,13 @@
 }
 
 .submit-button {
-    background-color: #a200ff; /* Couleur de fond personnalisée */
+    background-color: #3a9188; /* Couleur de fond personnalisée */
     border: none; /* Couleur de bordure personnalisée */
     font-size: 13px;
-    border-radius: 10px;
+    border-radius: 5px;
     height: 40px;
     padding: 0 20px;
     color: #fff;
-    margin-left: 0/* Couleur du texte */
 }
 
 .ant-table {
@@ -74,3 +73,38 @@
 .text-green {
     color: green;
 }
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #3a9188;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 110%;
+    
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #3a9188 transparent transparent;
+    
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
