--- a/frontend/src/assets/css/Login.css
+++ b/frontend/src/assets/css/Login.css
@@ -1,53 +1,80 @@
-/* Conteneur principal pour la mise en page horizontale */
+/* Conteneur principal pour la mise en page verticale */
 .main-container {
   display: flex;
-  justify-content: space-between; /* Séparer les éléments avec de l'espace entre eux */
-  align-items: center; /* Centrer verticalement les éléments */
+  flex-direction: column; /* Changer en colonne pour empiler les éléments verticalement */
+  align-items: center; /* Centrer horizontalement les éléments */
   min-height: 90vh; /* Assurer que le conteneur prend toute la hauteur de la fenêtre */
-  background-color: #ffffff; /* Gris clair pour le fond */
+  background-color: #ffffff; /* Fond blanc pour le conteneur principal */
   padding: 20px; /* Ajouter un peu de padding autour du conteneur */
 }
-
-.left-image {
-  flex: 1; /* Prend une proportion de l'espace disponible */
+.top-content {
   display: flex;
+  align-items: center; /* Centrer verticalement l'image et le texte */
+  margin-bottom: 20px; /* Espacement entre l'image/texte et le formulaire */
+  width: 100%;
   justify-content: center;
-  margin-right: 20px;
+  padding: 20px;
+  margin-left: 30px; /* Centre le contenu horizontalement */
 }
 
-.left-image img {
-  max-width: 100%; 
-  width: 400px;
+.top-left {
+  display: flex;
+  align-items: center;
+  margin-right: -20rem; /* Ajustez cette valeur pour réduire l'espace entre l'image et le texte */
+}
+
+.top-img {
+  width: 120px; /* Ajuster la taille de l'image selon vos besoins */
   height: auto;
 }
 
+.top-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Alignement à gauche pour le texte */
+}
+
+
+.top-text {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
+  text-align: center;
+}
+.top-text strong {
+  color : #3a9188
+}
+.top-copyright {
+  font-size: 12px;
+  color: #333;
+  margin-top: 5px;
+}
+
 .container-login {
-  flex: 1; /* Prend une proportion de l'espace disponible */
-  margin: 0 auto;
-  padding: 30px;
+  padding: 40px;
   max-width: 430px;
   width: 100%;
   background-color: #fff; /* Fond blanc pour le conteneur de connexion */
   border-radius: 12px; /* Arrondir les coins du conteneur */
-  box-shadow: 0 4px 8px rgba(0, 0.3, 0.4, 0.4); /* Ajouter une ombre légère */
+  box-shadow: 0 4px 8px rgba(0.5, 0.4, 0.5, 0.5); /* Ajouter une ombre légère */
   box-sizing: border-box;
   position: relative;
-  margin-right: 40px;
+  margin: 0 auto;
+  margin-top : 50px
 }
 
-/* Style pour le titre du formulaire */
 .title-login {
   display: flex;
-  justify-content: center; /* Centrer horizontalement */
-  align-items: center; /* Centrer verticalement */
-  margin-top: -5rem;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .title-login img {
-  width: 8rem;
+  width: 8rem; 
+  margin-top: -6rem;/* Réduire légèrement la taille du logo */
 }
 
-/* Autres styles inchangés */
 .link {
   font-family: 'Calibri';
   text-align: center;
@@ -73,7 +100,7 @@
   min-width: 20rem;
   padding: 5px 0; /* Agrandir le padding vertical */
   font-size: 16px;
-  color: #5907f3;
+  color: #3a9188;
   font-weight: 400;
   margin-bottom: 30px;
   border: none;
@@ -81,8 +108,6 @@
   border-bottom: 1px solid #8f8d8d;
   outline: none;
 }
-
-
 
 .formContent .inputBox .toggle-visibility {
   position: absolute;
@@ -98,7 +123,7 @@
   display: block;
   margin: 0 auto 20px;
   min-width: 150px; /* Agrandir légèrement la largeur du bouton */
-  background: #5907f3;
+  background: #3a9188;
   color: #fff;
   padding: 15px; /* Agrandir le padding */
   border: none;
@@ -110,42 +135,10 @@
 
 .formContent button:hover {
   background-color: #fff;
-  color: #5907f3;
+  color: #3a9188;
   cursor: pointer;
-  border: 1px solid #5907f3;
+  border: 1px solid #3a9188;
 }
-
-.container-login .and {
-  font-family: 'Calibri';
-  font-size: 20px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.container-login .google {
-  margin-top: 15px;
-}
-
-.google-button {
-  display: flex;
-  align-items: center; /* Centrer verticalement */
-  justify-content: center; /* Centrer horizontalement */
-  background: #fff;
-  border: 1px solid #000;
-  border-radius: 16px;
-  padding: 15px; /* Agrandir le padding */
-  cursor: pointer;
-}
-
-.google-button img {
-  width: 25px;
-  height: 24px;
-  margin-right: 10px;
-}
-
-.google-button span {
-  font-size: 15px;
-  font-family: 'Calibri';
-  margin-left: 0.5rem; /* Ajuster légèrement la position du texte vers la gauche */
-  font-weight: 1000;
+.sweet-loading {
+  width: 10px;
 }
