--- a/frontend/src/assets/css/NavBar.css
+++ b/frontend/src/assets/css/NavBar.css
@@ -18,7 +18,7 @@ body {
 }
 .span-title{
     font-weight: bold;
-    color : #c308f1;
+    color : #3a9188;
     font-size: 45px;
     letter-spacing: 6px;
     font-family: "Bigelow Rules";
@@ -29,6 +29,7 @@ body {
     justify-content: space-between; /* Espace entre les éléments à gauche et à droite */
     align-items: center;
     max-width: 1200px;
+    height: 100px;
     margin: 0 auto;
 }
 
@@ -39,12 +40,12 @@ body {
 }
 
 .logo {
-    height: 5.6rem;
-    width: auto;
+    height: 85px;
+    width: 100px;
 }
 
 .navbar-links-container {
-    margin-left: 28rem; 
+    margin-left: 30rem; 
 }
 
 .navbar-links {
@@ -60,18 +61,19 @@ body {
     color: #333;
     padding: 10px 15px;
     transition: color 0.3s ease;
+    font-size: 16px;
     position: relative; /* Ajouté */
 }
 
 .navbar-links a:hover {
-    color: #a200ff;
+    color: #3a9188;
 }
 
 .navbar-links a::before {
     content: " ";
     width: 100%;
     height: 0.2rem;
-    background: linear-gradient(90deg, #d928fd, #570152 100%);
+    background: linear-gradient(90deg, #3a9188, #14554e 100%);
     border-radius: 0.5rem;
     position: absolute;
     bottom: -0.2rem; /* Ajusté pour mieux positionner */
@@ -95,7 +97,7 @@ body {
     border: none;
     font-family: "Calibri";
     font-weight: 800;
-    color: #c308f1;
+    color: #3a9188;
     cursor: pointer;
     padding: 10px 15px;
     display: flex;
