--- a/frontend/src/assets/css/Stat.css
+++ b/frontend/src/assets/css/Stat.css
@@ -13,14 +13,14 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 1200px; /* Ajustez la largeur totale du conteneur si nécessaire */
+    max-width: 1200px; 
 }
 
 .minicards-container {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: 20px; /* Espace entre les minicards et le graphique en ligne */
+    margin-bottom: 20px; 
 }
 
 .minicards-row {
@@ -30,7 +30,7 @@
 }
 
 .minicard {
-    width: 150px;
+    width: 200px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -39,20 +39,20 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0.1, 0.1, 0.2);
 }
 
 .minicard h3 {
     margin: 0;
     font-size: 16px;
-    color: #333;
+    color: #3a9188;
 }
 
 .minicard p {
-    margin: 5px 0 0;
-    font-size: 24px;
+    margin: 0;
+    font-size: 30px;
     font-weight: bold;
-    color: #ac009d;
+    color: #3a9188;
 }
 
 .line-chart {
@@ -75,8 +75,6 @@
     height: 500px;
     margin-bottom: 20px;
 }
-
-/* src/components/Statistiques.css */
 
 .doughnut-description {
     text-align: center;
