--- a/frontend/src/assets/css/signal.css
+++ b/frontend/src/assets/css/signal.css
@@ -1,11 +1,9 @@
-
-
 .signal {
   position: absolute;
   top: 15rem;
   left: 1rem;
-  border: 2.5px solid rgb(177, 37, 196);
-  border-radius: 12px;
+  border: 1px solid #3a9188;
+  border-radius: 10px;
   background: #fdfdfd;
   padding: 1rem 0;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.03);
@@ -28,7 +26,7 @@
 .signal__link span {
   position: absolute;
   left: 100%;
-  background-color: rgb(177, 37, 196);
+  background-color: #3a9188;
   width: 110px;
   transform: translate(-1rem);
   margin-left: 1rem;
