--- a/frontend/src/assets/css/ErrorPage.css
+++ b/frontend/src/assets/css/ErrorPage.css
@@ -21,7 +21,7 @@
 }
 
 .back-button:hover {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     border: 1px solid #3a9188;
-    color: #a200ff;
+    color: #000000;
 }
