--- a/frontend/src/assets/css/Violations.css
+++ b/frontend/src/assets/css/Violations.css
@@ -32,7 +32,7 @@
   background-color: #3a9188; /* Couleur de fond personnalisée */
   border: none; /* Couleur de bordure personnalisée */
   font-size: 14px;
-  font-family: "Calibri";
+  font-family: "Avalon";
   border-radius: 5px;
   height: 40px;
   padding: 0 20px;
