--- a/frontend/src/assets/css/Landing.css
+++ b/frontend/src/assets/css/Landing.css
@@ -1,10 +1,9 @@
-
 .landing-page-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .text-container {
@@ -14,45 +13,18 @@
     box-shadow: 0 4px 8px rgba(0, 0.1, 0.1, 0.2);
     border-radius: 8px;
 }
-.map-container {
-    width: 100%;
-    height: 50vh;
-    box-sizing: border-box;
-    margin-top: 20rem;
-    position: absolute;
-}
 
-.footer-container {
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: 7rem;
-}
+
 .img-right {
     margin-left: 920px;
     position: relative;
     width: 300px;   
 }
+
 .minint {
     margin-bottom: 0;
     height: auto;
     display: block;
     margin-top: 50px;
 }
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .top-container,
-    .middle-container {
-        flex-direction: column;
-        width: 100%;
-    }
 
-    .text-container, .card-container {
-        width: 100%;
-        margin-bottom: 1rem;
-    }
-
-    .map-container {
-        width: 100%;
-        height: 60vh;
-    }
-}
