--- a/frontend/src/assets/css/footer.css
+++ b/frontend/src/assets/css/footer.css
@@ -1,27 +1,73 @@
-/* Footer.css */
 .footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px;
+  padding: 25px;
   background-color: #313030;
   width: 100%;
-  height: 300px;
   box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between; /* Disposition horizontale */
+  align-items: flex-start; /* Alignement vertical */
+  width: 100%;
+}
+
+.contact-info, .link-info {
+  margin: 5px 0;
+  font-size: 15px;
+  font-weight: 400;
+  color: #e4e4e4;
+  display: flex;
+  align-items: center;
 }
 
 .contact-info {
-  margin: 5px 0;
-  font-size: 15px;
-  font-weight: 400px;
-  color : #e4e4e4;
   display: flex;
+  align-items: center; /* Aligne les images et le texte verticalement */
+  margin: 5px 0; /* Espacement entre chaque contact */
 }
+
 .contact-info img {
-  width: 20px; /* Ajustez la largeur souhaitée */
-  height: 20px; /* Conserve les proportions de l'image */
+  width: 20px;
+  height: 20px;
   margin-right: 5px;
-  margin-top: 0; /* Ajoute un espace entre l'image et le texte */
+}
+
+.contact-info-container {
+  display: flex;
+  flex-direction: column; /* Aligne les éléments verticalement */
+  align-items: flex-start; /* Aligne à gauche */
+  margin-bottom: 20px; /* Espace en bas si nécessaire */
+}
+
+.contact-info {
+  margin: 5px 0; /* Espacement entre les informations de contact */
+  font-size: 15px;
+  font-weight: 400;
+  color: #e4e4e4;
+  display: flex;
+  align-items: center;
+}
+
+.footer-container {
+  text-align: left;
+  margin-left: 100px; /* Centrer les liens utiles */
+}
+.contact-info-container h3{
+  color: #3a9188;
+  font-weight: bold;
+  letter-spacing: 10px;
+}
+.footer-container h3 {
+  color: #3a9188;
+  font-weight: bold;
+  letter-spacing: 10px;
+}
+.map-container {
+  width: 100%
 }
 
 .copyright {
@@ -29,6 +75,7 @@
   font-size: 14px;
   color: #a1a1a1;
 }
+
 .footer-hr {
   width: 100%;
   border: none;
@@ -42,57 +89,29 @@
   width: 200px;
   height: 50px;
   border-radius: 5px;
-  z-index: 1;
-  position: relative;
   padding: 10px 20px;
   font-size: 15px;
-  font-family: "calibri";
   color: #fff;
-  overflow: hidden;
-  transition: 0.5s;
-  letter-spacing: 1px;
   cursor: pointer;
-}
-.btn-15:after {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 100%;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  background-color: #3a9188;
-  border-radius: 5px;
-  box-shadow: inset 2px 2px 2px 0px rgba(255,255,255,.5),
-              7px 7px 20px 0px rgba(0,0,0,.1),
-              4px 4px 5px 0px rgba(0,0,0,.1);
-  transition: all 0.3s ease;
-}
-.btn-15:hover {
-  color: #fff;
-}
-.btn-15:hover:after {
-  left: 0;
-  width: 100%;
-}
-.btn-15:active {
-  top: 2px;
-}
-.footer-container {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  position: absolute;
-  margin-top : 40rem
+  transition: 0.5s;
 }
 
+.btn-15:hover {
+  background-color: #424e4d; /* Change on hover */
+}
+.scroll-to-top{
+  width: 50px;
+  margin-left: auto;
+  margin-right: 20px;
+}
 @media (max-width: 768px) {
-  .footer-hr {
-      width: 100%;
+  .footer-content {
+    flex-direction: column; /* Empile les éléments sur les petits écrans */
+    align-items: center; /* Centre tous les éléments */
   }
 
-  .btn-15 {
-      font-size: 14px;
-      padding: 8px 16px;
+  .map-container {
+    width: 100%; /* Prend toute la largeur sur les petits écrans */
+    margin-left: 0; /* Supprime l'espace à gauche */
   }
 }
